# sserpapi

./: .gitignore  README.md  pyproject.toml  requirements.txt
sserpapi/: add_user.py  alembic.ini  auth.py  db_connection.py  db_queries.py  dependency.py  logger_config.py  logging.yaml  main.py  pydantic_schemas.py  schemas.py  sql_models.py
sserpapi/alembic/: env.py
sserpapi/alembic/versions/: 0bd714da1dd9_modify_column_name_in_contacts_table.py  0c9f6956f0d1_add_users_table.py  18ffe2b2074b_add_table_client_types.py  2046f0af6432_add_no_null_constraint_to_email_column_.py  2b855fe941d0_modify_column_in_addresses_table.py  33ca9555329d_add_cascade_all_delete_orphan_in_.py  34349cc06724_remove_ondelete_restrict_from_contacts_.py  4bad285ca631_add_email_column_in_contacts_table_and_.py  6c0ced926e0a_change_column_properties_of_user_table.py  75fadd131d91_add_columns_in_clients_table.py  79c17856218b_add_table_service_types.py  811d8c968c35_correct_relationship_parameters_in_.py  88747c355f07_add_ondelete_cascade_in_service_id_.py  997dc279e3ab_add_ondelete_cascade_in_client_id_and_.py  9b5bffc7637a_make_name_and_client_type_id_column_.py  a5b3be35c1ca_add_all_tables.py  a805bc7a72b8_add_ondelete_cascade_in_client_id_and_.py  a9a5d64fd731_add_on_delete_restriction_in_pops_table_.py  afb10e1a3d8b_create_all_tables.py  c47f810550f6_add_column_and_modify_column_properties_.py  c5a564a82684_add_table_pops.py  c5ff2d7d43f8_restructure_the_database.py  c9394c4bc8f4_add_scope_column_in_users_table.py  cb73214a3d94_add_all_tables.py  e16173703a20_add_column_client_types_id_in_clients_.py  e18f99878c8c_add_table_account_managers.py  e1f63709b549_correct_relationship_in_clients.py  e6133c6c3f43_add_constraint_not_null_to_location_and_.py  f15508442820_add_first_name_middle_name_last_name_.py  f444fa31ac60_modify_column_name_in_clients_table.py  fc4665ac977f_drop_tables_backbones_lastmiles_and_.py
sserpapi/db/: connection.py  dependency.py  models.py  queries.py
sserpapi/routers/: clients.py  users.py
sserpapi/scripts/: add_user.py  create_tables.py  reset_db.py  sserpapi.service  user_add.py
tests/: clear_db.py  clear_tables.py  conftest.py  create_test_tables.py  test_account_manager.py  test_address.py  test_auth.py  test_client.py  test_client_type.py  test_clients.py  test_contact.py  test_pop.py  test_service.py  test_service_type.py  test_user.py  test_vendor.py
