[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sserpapi"
version = "0.1.0"
description = "A small and simple erp backend with fastapi and postgresql"
authors = [{name="Saiful Islam", email="saiful.kbtel@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi==0.110.1",
    "sqlalchemy==2.0.29",
    "uvicorn==0.29.0",
    "psycopg2-binary==2.9.9",
    "passlib==1.7.4",
    "python-jose==3.3.0",
    "python-multipart==0.0.9",
    "python-dotenv>=1.0.1",
    "PyYAML>=6.0.1"
    ]

[tool.setuptools_scm]
version_file = "sserpapi/_version.py"

[project.urls]
Homepage = "https://github.com/saifuldipak/sserpapi"
Issues = "https://github.com/saifuldipak/sserpapi/issues"
