[build-system]
requires = ["hatchling", "hatch-build-scripts"]
build-backend = "hatchling.build"

[project]
name = "sserpapi"
version = "0.1.0-b.1"
description = "A small and simple erp backend with fastapi and postgresql"
authors = [{name="Saiful Islam", email="saiful.kbtel@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi==0.110.1",
    "sqlalchemy==2.0.29",
    "uvicorn==0.29.0",
    "psycopg2-binary==2.9.9",
    "passlib==1.7.4",
    "python-jose==3.3.0",
    "python-multipart==0.0.9",
    "python-dotenv>=1.0.1",
    "PyYAML>=6.0.1",
    "requests>=2.31.0",
    "pytest>=8.2.0",
    "alembic>=1.13.1",
    "pydantic[email]"
    ]

[project.urls]
Homepage = "https://github.com/saifuldipak/sserpapi"
Issues = "https://github.com/saifuldipak/sserpapi/issues"

[tool.hatch.build.targets.wheel]
artifacts = ["sserpapi/.env"]
exclude = ["sserpapi/alembic", "sserpapi/alembic.ini"]

[tool.hatch.build.targets.wheel.force-include]
"README.md" = "sserpapi/docs/README.md"
"LICENSE.txt" = "sserpapi/docs/LICENSE.txt"

[[tool.hatch.build.hooks.build-scripts.scripts]]
out_dir = "sserpapi/log"
clean_out_dir = true
commands = [
    "echo 'Logs will be written here' > app.log",
]
artifacts = ["sserpapi/log/app.log"]

