[build-system]
requires = ["hatchling", "hatch-build-scripts"]
build-backend = "hatchling.build"

[project]
name = "sserpapi"
version = "0.1.0-b.1"
description = "A small and simple erp backend with fastapi and postgresql"
authors = [{name="Saiful Islam", email="saiful.kbtel@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi",
    "sqlalchemy",
    "uvicorn",
    "psycopg2-binary",
    "passlib",
    "python-jose",
    "python-multipart",
    "python-dotenv",
    "PyYAML",
    "requests",
    "pytest",
    "alembic",
    "pydantic[email]",
    "gunicorn"
    ]

[project.urls]
Homepage = "https://github.com/saifuldipak/sserpapi"
Issues = "https://github.com/saifuldipak/sserpapi/issues"

[tool.hatch.build.targets.wheel]
artifacts = ["sserpapi/.env"]
exclude = ["sserpapi/alembic", "sserpapi/alembic.ini"]

[tool.hatch.build.targets.wheel.force-include]
"README.md" = "sserpapi/docs/README.md"
"LICENSE" = "sserpapi/docs/LICENSE"

[[tool.hatch.build.hooks.build-scripts.scripts]]
out_dir = "sserpapi/log"
clean_out_dir = true
commands = [
    "echo 'Logs will be written here' > app.log",
]
artifacts = ["sserpapi/log/app.log"]

